# name: TestUpdateCache.test_refresh_dashboard_cache
  '
  SELECT "posthog_dashboardtile"."id",
         "posthog_dashboardtile"."dashboard_id",
         "posthog_dashboardtile"."insight_id",
         "posthog_dashboardtile"."layouts",
         "posthog_dashboardtile"."color",
         "posthog_dashboardtile"."filters_hash",
         "posthog_dashboard"."id",
         "posthog_dashboard"."name",
         "posthog_dashboard"."description",
         "posthog_dashboard"."team_id",
         "posthog_dashboard"."pinned",
         "posthog_dashboard"."created_at",
         "posthog_dashboard"."created_by_id",
         "posthog_dashboard"."deleted",
         "posthog_dashboard"."share_token",
         "posthog_dashboard"."is_shared",
         "posthog_dashboard"."last_accessed_at",
         "posthog_dashboard"."filters",
         "posthog_dashboard"."creation_mode",
         "posthog_dashboard"."restriction_level",
         "posthog_dashboarditem"."id",
         "posthog_dashboarditem"."name",
         "posthog_dashboarditem"."derived_name",
         "posthog_dashboarditem"."description",
         "posthog_dashboarditem"."team_id",
         "posthog_dashboarditem"."filters",
         "posthog_dashboarditem"."filters_hash",
         "posthog_dashboarditem"."order",
         "posthog_dashboarditem"."deleted",
         "posthog_dashboarditem"."saved",
         "posthog_dashboarditem"."created_at",
         "posthog_dashboarditem"."last_refresh",
         "posthog_dashboarditem"."refreshing",
         "posthog_dashboarditem"."created_by_id",
         "posthog_dashboarditem"."is_sample",
         "posthog_dashboarditem"."short_id",
         "posthog_dashboarditem"."favorited",
         "posthog_dashboarditem"."refresh_attempt",
         "posthog_dashboarditem"."last_modified_at",
         "posthog_dashboarditem"."last_modified_by_id",
         "posthog_dashboarditem"."dashboard_id",
         "posthog_dashboarditem"."layouts",
         "posthog_dashboarditem"."color",
         "posthog_dashboarditem"."dive_dashboard_id",
         "posthog_dashboarditem"."updated_at"
  FROM "posthog_dashboardtile"
  INNER JOIN "posthog_dashboard" ON ("posthog_dashboardtile"."dashboard_id" = "posthog_dashboard"."id")
  INNER JOIN "posthog_dashboarditem" ON ("posthog_dashboardtile"."insight_id" = "posthog_dashboarditem"."id")
  WHERE "posthog_dashboardtile"."dashboard_id" = 2
  '
---
# name: TestUpdateCache.test_refresh_dashboard_cache.1
  '
  SELECT "posthog_dashboardtile"."id",
         "posthog_dashboardtile"."dashboard_id",
         "posthog_dashboardtile"."insight_id",
         "posthog_dashboardtile"."layouts",
         "posthog_dashboardtile"."color",
         "posthog_dashboardtile"."filters_hash",
         "posthog_dashboard"."id",
         "posthog_dashboard"."name",
         "posthog_dashboard"."description",
         "posthog_dashboard"."team_id",
         "posthog_dashboard"."pinned",
         "posthog_dashboard"."created_at",
         "posthog_dashboard"."created_by_id",
         "posthog_dashboard"."deleted",
         "posthog_dashboard"."share_token",
         "posthog_dashboard"."is_shared",
         "posthog_dashboard"."last_accessed_at",
         "posthog_dashboard"."filters",
         "posthog_dashboard"."creation_mode",
         "posthog_dashboard"."restriction_level",
         "posthog_dashboarditem"."id",
         "posthog_dashboarditem"."name",
         "posthog_dashboarditem"."derived_name",
         "posthog_dashboarditem"."description",
         "posthog_dashboarditem"."team_id",
         "posthog_dashboarditem"."filters",
         "posthog_dashboarditem"."filters_hash",
         "posthog_dashboarditem"."order",
         "posthog_dashboarditem"."deleted",
         "posthog_dashboarditem"."saved",
         "posthog_dashboarditem"."created_at",
         "posthog_dashboarditem"."last_refresh",
         "posthog_dashboarditem"."refreshing",
         "posthog_dashboarditem"."created_by_id",
         "posthog_dashboarditem"."is_sample",
         "posthog_dashboarditem"."short_id",
         "posthog_dashboarditem"."favorited",
         "posthog_dashboarditem"."refresh_attempt",
         "posthog_dashboarditem"."last_modified_at",
         "posthog_dashboarditem"."last_modified_by_id",
         "posthog_dashboarditem"."dashboard_id",
         "posthog_dashboarditem"."layouts",
         "posthog_dashboarditem"."color",
         "posthog_dashboarditem"."dive_dashboard_id",
         "posthog_dashboarditem"."updated_at"
  FROM "posthog_dashboardtile"
  INNER JOIN "posthog_dashboarditem" ON ("posthog_dashboardtile"."insight_id" = "posthog_dashboarditem"."id")
  INNER JOIN "posthog_dashboard" ON ("posthog_dashboardtile"."dashboard_id" = "posthog_dashboard"."id")
  WHERE "posthog_dashboardtile"."insight_id" = 2
  '
---
# name: TestUpdateCache.test_refresh_dashboard_cache.10
  '
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."ingested_event",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."test_account_filters",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21
  '
---
# name: TestUpdateCache.test_refresh_dashboard_cache.11
  '
  SELECT "posthog_dashboard"."id",
         "posthog_dashboard"."name",
         "posthog_dashboard"."description",
         "posthog_dashboard"."team_id",
         "posthog_dashboard"."pinned",
         "posthog_dashboard"."created_at",
         "posthog_dashboard"."created_by_id",
         "posthog_dashboard"."deleted",
         "posthog_dashboard"."share_token",
         "posthog_dashboard"."is_shared",
         "posthog_dashboard"."last_accessed_at",
         "posthog_dashboard"."filters",
         "posthog_dashboard"."creation_mode",
         "posthog_dashboard"."restriction_level"
  FROM "posthog_dashboard"
  WHERE "posthog_dashboard"."id" = 2
  LIMIT 21
  '
---
# name: TestUpdateCache.test_refresh_dashboard_cache.12
  '
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."ingested_event",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."test_account_filters",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21
  '
---
# name: TestUpdateCache.test_refresh_dashboard_cache.13
  '
  SELECT "posthog_dashboard"."id",
         "posthog_dashboard"."name",
         "posthog_dashboard"."description",
         "posthog_dashboard"."team_id",
         "posthog_dashboard"."pinned",
         "posthog_dashboard"."created_at",
         "posthog_dashboard"."created_by_id",
         "posthog_dashboard"."deleted",
         "posthog_dashboard"."share_token",
         "posthog_dashboard"."is_shared",
         "posthog_dashboard"."last_accessed_at",
         "posthog_dashboard"."filters",
         "posthog_dashboard"."creation_mode",
         "posthog_dashboard"."restriction_level"
  FROM "posthog_dashboard"
  WHERE "posthog_dashboard"."id" = 2
  LIMIT 21
  '
---
# name: TestUpdateCache.test_refresh_dashboard_cache.14
  '
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."ingested_event",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."test_account_filters",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21
  '
---
# name: TestUpdateCache.test_refresh_dashboard_cache.15
  '
  SELECT "posthog_dashboard"."id",
         "posthog_dashboard"."name",
         "posthog_dashboard"."description",
         "posthog_dashboard"."team_id",
         "posthog_dashboard"."pinned",
         "posthog_dashboard"."created_at",
         "posthog_dashboard"."created_by_id",
         "posthog_dashboard"."deleted",
         "posthog_dashboard"."share_token",
         "posthog_dashboard"."is_shared",
         "posthog_dashboard"."last_accessed_at",
         "posthog_dashboard"."filters",
         "posthog_dashboard"."creation_mode",
         "posthog_dashboard"."restriction_level"
  FROM "posthog_dashboard"
  WHERE "posthog_dashboard"."id" = 2
  LIMIT 21
  '
---
# name: TestUpdateCache.test_refresh_dashboard_cache.16
  '
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."ingested_event",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."test_account_filters",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21
  '
---
# name: TestUpdateCache.test_refresh_dashboard_cache.17
  '
  SELECT COUNT(*) AS "__count"
  FROM "posthog_dashboardtile"
  INNER JOIN "posthog_dashboard" ON ("posthog_dashboardtile"."dashboard_id" = "posthog_dashboard"."id")
  INNER JOIN "posthog_dashboarditem" ON ("posthog_dashboardtile"."insight_id" = "posthog_dashboarditem"."id")
  WHERE (("posthog_dashboard"."is_shared"
          OR "posthog_dashboard"."last_accessed_at" > '2022-04-21T08:19:58.979219+00:00'::timestamptz)
         AND NOT ("posthog_dashboard"."deleted")
         AND NOT ("posthog_dashboarditem"."refreshing")
         AND NOT ("posthog_dashboarditem"."deleted")
         AND NOT ("posthog_dashboarditem"."refresh_attempt" > 2
                  AND "posthog_dashboarditem"."refresh_attempt" IS NOT NULL)
         AND NOT ("posthog_dashboarditem"."filters" = '{}'))
  '
---
# name: TestUpdateCache.test_refresh_dashboard_cache.18
  '
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."ingested_event",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."test_account_filters",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21
  '
---
# name: TestUpdateCache.test_refresh_dashboard_cache.19
  '
  UPDATE "posthog_dashboarditem"
  SET "refreshing" = true
  WHERE (("posthog_dashboarditem"."filters_hash" = 'cache_d94e25bfac795f857a0a9424765f642e'
          AND "posthog_dashboarditem"."team_id" = 2)
         OR ("posthog_dashboarditem"."id" IN
               (SELECT U0."id"
                FROM "posthog_dashboardtile" U0
                WHERE U0."filters_hash" = 'cache_d94e25bfac795f857a0a9424765f642e')
             AND "posthog_dashboarditem"."team_id" = 2))
  '
---
# name: TestUpdateCache.test_refresh_dashboard_cache.2
  '
  SELECT "posthog_dashboardtile"."id",
         "posthog_dashboardtile"."dashboard_id",
         "posthog_dashboardtile"."insight_id",
         "posthog_dashboardtile"."layouts",
         "posthog_dashboardtile"."color",
         "posthog_dashboardtile"."filters_hash",
         "posthog_dashboard"."id",
         "posthog_dashboard"."name",
         "posthog_dashboard"."description",
         "posthog_dashboard"."team_id",
         "posthog_dashboard"."pinned",
         "posthog_dashboard"."created_at",
         "posthog_dashboard"."created_by_id",
         "posthog_dashboard"."deleted",
         "posthog_dashboard"."share_token",
         "posthog_dashboard"."is_shared",
         "posthog_dashboard"."last_accessed_at",
         "posthog_dashboard"."filters",
         "posthog_dashboard"."creation_mode",
         "posthog_dashboard"."restriction_level",
         "posthog_dashboarditem"."id",
         "posthog_dashboarditem"."name",
         "posthog_dashboarditem"."derived_name",
         "posthog_dashboarditem"."description",
         "posthog_dashboarditem"."team_id",
         "posthog_dashboarditem"."filters",
         "posthog_dashboarditem"."filters_hash",
         "posthog_dashboarditem"."order",
         "posthog_dashboarditem"."deleted",
         "posthog_dashboarditem"."saved",
         "posthog_dashboarditem"."created_at",
         "posthog_dashboarditem"."last_refresh",
         "posthog_dashboarditem"."refreshing",
         "posthog_dashboarditem"."created_by_id",
         "posthog_dashboarditem"."is_sample",
         "posthog_dashboarditem"."short_id",
         "posthog_dashboarditem"."favorited",
         "posthog_dashboarditem"."refresh_attempt",
         "posthog_dashboarditem"."last_modified_at",
         "posthog_dashboarditem"."last_modified_by_id",
         "posthog_dashboarditem"."dashboard_id",
         "posthog_dashboarditem"."layouts",
         "posthog_dashboarditem"."color",
         "posthog_dashboarditem"."dive_dashboard_id",
         "posthog_dashboarditem"."updated_at"
  FROM "posthog_dashboardtile"
  INNER JOIN "posthog_dashboarditem" ON ("posthog_dashboardtile"."insight_id" = "posthog_dashboarditem"."id")
  INNER JOIN "posthog_dashboard" ON ("posthog_dashboardtile"."dashboard_id" = "posthog_dashboard"."id")
  WHERE "posthog_dashboardtile"."insight_id" = 2
  '
---
# name: TestUpdateCache.test_refresh_dashboard_cache.20
  '
  SELECT "constance_config"."id",
         "constance_config"."key",
         "constance_config"."value"
  FROM "constance_config"
  WHERE "constance_config"."key" = 'constance:posthog:AGGREGATE_BY_DISTINCT_IDS_TEAMS'
  LIMIT 21
  '
---
# name: TestUpdateCache.test_refresh_dashboard_cache.21
  '
  SELECT "constance_config"."id",
         "constance_config"."key",
         "constance_config"."value"
  FROM "constance_config"
  WHERE "constance_config"."key" = 'constance:posthog:AGGREGATE_BY_DISTINCT_IDS_TEAMS'
  LIMIT 21
  '
---
# name: TestUpdateCache.test_refresh_dashboard_cache.22
  '
  SELECT "constance_config"."id",
         "constance_config"."key",
         "constance_config"."value"
  FROM "constance_config"
  WHERE "constance_config"."key" = 'constance:posthog:MATERIALIZED_COLUMNS_ENABLED'
  LIMIT 21
  '
---
# name: TestUpdateCache.test_refresh_dashboard_cache.23
  '
  SELECT "constance_config"."id",
         "constance_config"."key",
         "constance_config"."value"
  FROM "constance_config"
  WHERE "constance_config"."key" = 'constance:posthog:MATERIALIZED_COLUMNS_ENABLED'
  LIMIT 21
  '
---
# name: TestUpdateCache.test_refresh_dashboard_cache.24
  '
  SELECT "constance_config"."id",
         "constance_config"."key",
         "constance_config"."value"
  FROM "constance_config"
  WHERE "constance_config"."key" = 'constance:posthog:MATERIALIZED_COLUMNS_ENABLED'
  LIMIT 21
  '
---
# name: TestUpdateCache.test_refresh_dashboard_cache.25
  '
  UPDATE "posthog_dashboarditem"
  SET "last_refresh" = '2022-04-28T08:19:59.062783+00:00'::timestamptz,
      "refreshing" = false,
                     "refresh_attempt" = 2
  WHERE (("posthog_dashboarditem"."filters_hash" = 'cache_d94e25bfac795f857a0a9424765f642e'
          AND "posthog_dashboarditem"."team_id" = 2)
         OR ("posthog_dashboarditem"."id" IN
               (SELECT U0."id"
                FROM "posthog_dashboardtile" U0
                WHERE U0."filters_hash" = 'cache_d94e25bfac795f857a0a9424765f642e')
             AND "posthog_dashboarditem"."team_id" = 2))
  '
---
# name: TestUpdateCache.test_refresh_dashboard_cache.26
  '
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."ingested_event",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."test_account_filters",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21
  '
---
# name: TestUpdateCache.test_refresh_dashboard_cache.27
  '
  UPDATE "posthog_dashboarditem"
  SET "refreshing" = true
  WHERE (("posthog_dashboarditem"."filters_hash" = 'cache_e22daf749790db8dccfb6c68ca50e5fc'
          AND "posthog_dashboarditem"."team_id" = 2)
         OR ("posthog_dashboarditem"."id" IN
               (SELECT U0."id"
                FROM "posthog_dashboardtile" U0
                WHERE U0."filters_hash" = 'cache_e22daf749790db8dccfb6c68ca50e5fc')
             AND "posthog_dashboarditem"."team_id" = 2))
  '
---
# name: TestUpdateCache.test_refresh_dashboard_cache.28
  '
  SELECT "constance_config"."id",
         "constance_config"."key",
         "constance_config"."value"
  FROM "constance_config"
  WHERE "constance_config"."key" = 'constance:posthog:AGGREGATE_BY_DISTINCT_IDS_TEAMS'
  LIMIT 21
  '
---
# name: TestUpdateCache.test_refresh_dashboard_cache.29
  '
  SELECT "constance_config"."id",
         "constance_config"."key",
         "constance_config"."value"
  FROM "constance_config"
  WHERE "constance_config"."key" = 'constance:posthog:MATERIALIZED_COLUMNS_ENABLED'
  LIMIT 21
  '
---
# name: TestUpdateCache.test_refresh_dashboard_cache.3
  '
  SELECT "posthog_dashboardtile"."id",
         "posthog_dashboardtile"."dashboard_id",
         "posthog_dashboardtile"."insight_id",
         "posthog_dashboardtile"."layouts",
         "posthog_dashboardtile"."color",
         "posthog_dashboardtile"."filters_hash",
         "posthog_dashboard"."id",
         "posthog_dashboard"."name",
         "posthog_dashboard"."description",
         "posthog_dashboard"."team_id",
         "posthog_dashboard"."pinned",
         "posthog_dashboard"."created_at",
         "posthog_dashboard"."created_by_id",
         "posthog_dashboard"."deleted",
         "posthog_dashboard"."share_token",
         "posthog_dashboard"."is_shared",
         "posthog_dashboard"."last_accessed_at",
         "posthog_dashboard"."filters",
         "posthog_dashboard"."creation_mode",
         "posthog_dashboard"."restriction_level",
         "posthog_dashboarditem"."id",
         "posthog_dashboarditem"."name",
         "posthog_dashboarditem"."derived_name",
         "posthog_dashboarditem"."description",
         "posthog_dashboarditem"."team_id",
         "posthog_dashboarditem"."filters",
         "posthog_dashboarditem"."filters_hash",
         "posthog_dashboarditem"."order",
         "posthog_dashboarditem"."deleted",
         "posthog_dashboarditem"."saved",
         "posthog_dashboarditem"."created_at",
         "posthog_dashboarditem"."last_refresh",
         "posthog_dashboarditem"."refreshing",
         "posthog_dashboarditem"."created_by_id",
         "posthog_dashboarditem"."is_sample",
         "posthog_dashboarditem"."short_id",
         "posthog_dashboarditem"."favorited",
         "posthog_dashboarditem"."refresh_attempt",
         "posthog_dashboarditem"."last_modified_at",
         "posthog_dashboarditem"."last_modified_by_id",
         "posthog_dashboarditem"."dashboard_id",
         "posthog_dashboarditem"."layouts",
         "posthog_dashboarditem"."color",
         "posthog_dashboarditem"."dive_dashboard_id",
         "posthog_dashboarditem"."updated_at"
  FROM "posthog_dashboardtile"
  INNER JOIN "posthog_dashboarditem" ON ("posthog_dashboardtile"."insight_id" = "posthog_dashboarditem"."id")
  INNER JOIN "posthog_dashboard" ON ("posthog_dashboardtile"."dashboard_id" = "posthog_dashboard"."id")
  WHERE "posthog_dashboardtile"."insight_id" = 2
  '
---
# name: TestUpdateCache.test_refresh_dashboard_cache.30
  '
  UPDATE "posthog_dashboarditem"
  SET "last_refresh" = '2022-04-28T08:19:59.102341+00:00'::timestamptz,
      "refreshing" = false,
                     "refresh_attempt" = 2
  WHERE (("posthog_dashboarditem"."filters_hash" = 'cache_e22daf749790db8dccfb6c68ca50e5fc'
          AND "posthog_dashboarditem"."team_id" = 2)
         OR ("posthog_dashboarditem"."id" IN
               (SELECT U0."id"
                FROM "posthog_dashboardtile" U0
                WHERE U0."filters_hash" = 'cache_e22daf749790db8dccfb6c68ca50e5fc')
             AND "posthog_dashboarditem"."team_id" = 2))
  '
---
# name: TestUpdateCache.test_refresh_dashboard_cache.31
  '
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."ingested_event",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."test_account_filters",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21
  '
---
# name: TestUpdateCache.test_refresh_dashboard_cache.32
  '
  UPDATE "posthog_dashboarditem"
  SET "refreshing" = true
  WHERE (("posthog_dashboarditem"."filters_hash" = 'cache_1954133f853fe5f03c9d16cc6ef81ddb'
          AND "posthog_dashboarditem"."team_id" = 2)
         OR ("posthog_dashboarditem"."id" IN
               (SELECT U0."id"
                FROM "posthog_dashboardtile" U0
                WHERE U0."filters_hash" = 'cache_1954133f853fe5f03c9d16cc6ef81ddb')
             AND "posthog_dashboarditem"."team_id" = 2))
  '
---
# name: TestUpdateCache.test_refresh_dashboard_cache.33
  '
  SELECT "constance_config"."id",
         "constance_config"."key",
         "constance_config"."value"
  FROM "constance_config"
  WHERE "constance_config"."key" = 'constance:posthog:AGGREGATE_BY_DISTINCT_IDS_TEAMS'
  LIMIT 21
  '
---
# name: TestUpdateCache.test_refresh_dashboard_cache.34
  '
  SELECT "constance_config"."id",
         "constance_config"."key",
         "constance_config"."value"
  FROM "constance_config"
  WHERE "constance_config"."key" = 'constance:posthog:MATERIALIZED_COLUMNS_ENABLED'
  LIMIT 21
  '
---
# name: TestUpdateCache.test_refresh_dashboard_cache.35
  '
  UPDATE "posthog_dashboarditem"
  SET "last_refresh" = '2022-04-28T08:19:59.140470+00:00'::timestamptz,
      "refreshing" = false,
                     "refresh_attempt" = 2
  WHERE (("posthog_dashboarditem"."filters_hash" = 'cache_1954133f853fe5f03c9d16cc6ef81ddb'
          AND "posthog_dashboarditem"."team_id" = 2)
         OR ("posthog_dashboarditem"."id" IN
               (SELECT U0."id"
                FROM "posthog_dashboardtile" U0
                WHERE U0."filters_hash" = 'cache_1954133f853fe5f03c9d16cc6ef81ddb')
             AND "posthog_dashboarditem"."team_id" = 2))
  '
---
# name: TestUpdateCache.test_refresh_dashboard_cache.36
  '
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."ingested_event",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."test_account_filters",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21
  '
---
# name: TestUpdateCache.test_refresh_dashboard_cache.37
  '
  UPDATE "posthog_dashboarditem"
  SET "refreshing" = true
  WHERE (("posthog_dashboarditem"."filters_hash" = 'cache_6d8795b49d6b23333512d62750a0d024'
          AND "posthog_dashboarditem"."team_id" = 2)
         OR ("posthog_dashboarditem"."id" IN
               (SELECT U0."id"
                FROM "posthog_dashboardtile" U0
                WHERE U0."filters_hash" = 'cache_6d8795b49d6b23333512d62750a0d024')
             AND "posthog_dashboarditem"."team_id" = 2))
  '
---
# name: TestUpdateCache.test_refresh_dashboard_cache.38
  '
  SELECT "constance_config"."id",
         "constance_config"."key",
         "constance_config"."value"
  FROM "constance_config"
  WHERE "constance_config"."key" = 'constance:posthog:AGGREGATE_BY_DISTINCT_IDS_TEAMS'
  LIMIT 21
  '
---
# name: TestUpdateCache.test_refresh_dashboard_cache.39
  '
  SELECT "constance_config"."id",
         "constance_config"."key",
         "constance_config"."value"
  FROM "constance_config"
  WHERE "constance_config"."key" = 'constance:posthog:MATERIALIZED_COLUMNS_ENABLED'
  LIMIT 21
  '
---
# name: TestUpdateCache.test_refresh_dashboard_cache.4
  '
  SELECT "posthog_dashboardtile"."id",
         "posthog_dashboardtile"."dashboard_id",
         "posthog_dashboardtile"."insight_id",
         "posthog_dashboardtile"."layouts",
         "posthog_dashboardtile"."color",
         "posthog_dashboardtile"."filters_hash",
         "posthog_dashboard"."id",
         "posthog_dashboard"."name",
         "posthog_dashboard"."description",
         "posthog_dashboard"."team_id",
         "posthog_dashboard"."pinned",
         "posthog_dashboard"."created_at",
         "posthog_dashboard"."created_by_id",
         "posthog_dashboard"."deleted",
         "posthog_dashboard"."share_token",
         "posthog_dashboard"."is_shared",
         "posthog_dashboard"."last_accessed_at",
         "posthog_dashboard"."filters",
         "posthog_dashboard"."creation_mode",
         "posthog_dashboard"."restriction_level",
         "posthog_dashboarditem"."id",
         "posthog_dashboarditem"."name",
         "posthog_dashboarditem"."derived_name",
         "posthog_dashboarditem"."description",
         "posthog_dashboarditem"."team_id",
         "posthog_dashboarditem"."filters",
         "posthog_dashboarditem"."filters_hash",
         "posthog_dashboarditem"."order",
         "posthog_dashboarditem"."deleted",
         "posthog_dashboarditem"."saved",
         "posthog_dashboarditem"."created_at",
         "posthog_dashboarditem"."last_refresh",
         "posthog_dashboarditem"."refreshing",
         "posthog_dashboarditem"."created_by_id",
         "posthog_dashboarditem"."is_sample",
         "posthog_dashboarditem"."short_id",
         "posthog_dashboarditem"."favorited",
         "posthog_dashboarditem"."refresh_attempt",
         "posthog_dashboarditem"."last_modified_at",
         "posthog_dashboarditem"."last_modified_by_id",
         "posthog_dashboarditem"."dashboard_id",
         "posthog_dashboarditem"."layouts",
         "posthog_dashboarditem"."color",
         "posthog_dashboarditem"."dive_dashboard_id",
         "posthog_dashboarditem"."updated_at"
  FROM "posthog_dashboardtile"
  INNER JOIN "posthog_dashboard" ON ("posthog_dashboardtile"."dashboard_id" = "posthog_dashboard"."id")
  INNER JOIN "posthog_dashboarditem" ON ("posthog_dashboardtile"."insight_id" = "posthog_dashboarditem"."id")
  WHERE "posthog_dashboardtile"."dashboard_id" = 2
  '
---
# name: TestUpdateCache.test_refresh_dashboard_cache.40
  '
  UPDATE "posthog_dashboarditem"
  SET "last_refresh" = '2022-04-28T08:19:59.177998+00:00'::timestamptz,
      "refreshing" = false,
                     "refresh_attempt" = 2
  WHERE (("posthog_dashboarditem"."filters_hash" = 'cache_6d8795b49d6b23333512d62750a0d024'
          AND "posthog_dashboarditem"."team_id" = 2)
         OR ("posthog_dashboarditem"."id" IN
               (SELECT U0."id"
                FROM "posthog_dashboardtile" U0
                WHERE U0."filters_hash" = 'cache_6d8795b49d6b23333512d62750a0d024')
             AND "posthog_dashboarditem"."team_id" = 2))
  '
---
# name: TestUpdateCache.test_refresh_dashboard_cache.41
  '
  SELECT "posthog_dashboarditem"."id",
         "posthog_dashboarditem"."name",
         "posthog_dashboarditem"."derived_name",
         "posthog_dashboarditem"."description",
         "posthog_dashboarditem"."team_id",
         "posthog_dashboarditem"."filters",
         "posthog_dashboarditem"."filters_hash",
         "posthog_dashboarditem"."order",
         "posthog_dashboarditem"."deleted",
         "posthog_dashboarditem"."saved",
         "posthog_dashboarditem"."created_at",
         "posthog_dashboarditem"."last_refresh",
         "posthog_dashboarditem"."refreshing",
         "posthog_dashboarditem"."created_by_id",
         "posthog_dashboarditem"."is_sample",
         "posthog_dashboarditem"."short_id",
         "posthog_dashboarditem"."favorited",
         "posthog_dashboarditem"."refresh_attempt",
         "posthog_dashboarditem"."last_modified_at",
         "posthog_dashboarditem"."last_modified_by_id",
         "posthog_dashboarditem"."dashboard_id",
         "posthog_dashboarditem"."layouts",
         "posthog_dashboarditem"."color",
         "posthog_dashboarditem"."dive_dashboard_id",
         "posthog_dashboarditem"."updated_at"
  FROM "posthog_dashboarditem"
  WHERE "posthog_dashboarditem"."id" = 2
  LIMIT 21
  '
---
# name: TestUpdateCache.test_refresh_dashboard_cache.42
  '
  SELECT "posthog_dashboarditem"."id",
         "posthog_dashboarditem"."name",
         "posthog_dashboarditem"."derived_name",
         "posthog_dashboarditem"."description",
         "posthog_dashboarditem"."team_id",
         "posthog_dashboarditem"."filters",
         "posthog_dashboarditem"."filters_hash",
         "posthog_dashboarditem"."order",
         "posthog_dashboarditem"."deleted",
         "posthog_dashboarditem"."saved",
         "posthog_dashboarditem"."created_at",
         "posthog_dashboarditem"."last_refresh",
         "posthog_dashboarditem"."refreshing",
         "posthog_dashboarditem"."created_by_id",
         "posthog_dashboarditem"."is_sample",
         "posthog_dashboarditem"."short_id",
         "posthog_dashboarditem"."favorited",
         "posthog_dashboarditem"."refresh_attempt",
         "posthog_dashboarditem"."last_modified_at",
         "posthog_dashboarditem"."last_modified_by_id",
         "posthog_dashboarditem"."dashboard_id",
         "posthog_dashboarditem"."layouts",
         "posthog_dashboarditem"."color",
         "posthog_dashboarditem"."dive_dashboard_id",
         "posthog_dashboarditem"."updated_at"
  FROM "posthog_dashboarditem"
  WHERE "posthog_dashboarditem"."id" = 2
  LIMIT 21
  '
---
# name: TestUpdateCache.test_refresh_dashboard_cache.43
  '
  SELECT "posthog_dashboarditem"."id",
         "posthog_dashboarditem"."name",
         "posthog_dashboarditem"."derived_name",
         "posthog_dashboarditem"."description",
         "posthog_dashboarditem"."team_id",
         "posthog_dashboarditem"."filters",
         "posthog_dashboarditem"."filters_hash",
         "posthog_dashboarditem"."order",
         "posthog_dashboarditem"."deleted",
         "posthog_dashboarditem"."saved",
         "posthog_dashboarditem"."created_at",
         "posthog_dashboarditem"."last_refresh",
         "posthog_dashboarditem"."refreshing",
         "posthog_dashboarditem"."created_by_id",
         "posthog_dashboarditem"."is_sample",
         "posthog_dashboarditem"."short_id",
         "posthog_dashboarditem"."favorited",
         "posthog_dashboarditem"."refresh_attempt",
         "posthog_dashboarditem"."last_modified_at",
         "posthog_dashboarditem"."last_modified_by_id",
         "posthog_dashboarditem"."dashboard_id",
         "posthog_dashboarditem"."layouts",
         "posthog_dashboarditem"."color",
         "posthog_dashboarditem"."dive_dashboard_id",
         "posthog_dashboarditem"."updated_at"
  FROM "posthog_dashboarditem"
  WHERE "posthog_dashboarditem"."id" = 2
  LIMIT 21
  '
---
# name: TestUpdateCache.test_refresh_dashboard_cache.5
  '
  SELECT "posthog_dashboardtile"."id",
         "posthog_dashboardtile"."dashboard_id",
         "posthog_dashboardtile"."insight_id",
         "posthog_dashboardtile"."layouts",
         "posthog_dashboardtile"."color",
         "posthog_dashboardtile"."filters_hash",
         "posthog_dashboard"."id",
         "posthog_dashboard"."name",
         "posthog_dashboard"."description",
         "posthog_dashboard"."team_id",
         "posthog_dashboard"."pinned",
         "posthog_dashboard"."created_at",
         "posthog_dashboard"."created_by_id",
         "posthog_dashboard"."deleted",
         "posthog_dashboard"."share_token",
         "posthog_dashboard"."is_shared",
         "posthog_dashboard"."last_accessed_at",
         "posthog_dashboard"."filters",
         "posthog_dashboard"."creation_mode",
         "posthog_dashboard"."restriction_level",
         "posthog_dashboarditem"."id",
         "posthog_dashboarditem"."name",
         "posthog_dashboarditem"."derived_name",
         "posthog_dashboarditem"."description",
         "posthog_dashboarditem"."team_id",
         "posthog_dashboarditem"."filters",
         "posthog_dashboarditem"."filters_hash",
         "posthog_dashboarditem"."order",
         "posthog_dashboarditem"."deleted",
         "posthog_dashboarditem"."saved",
         "posthog_dashboarditem"."created_at",
         "posthog_dashboarditem"."last_refresh",
         "posthog_dashboarditem"."refreshing",
         "posthog_dashboarditem"."created_by_id",
         "posthog_dashboarditem"."is_sample",
         "posthog_dashboarditem"."short_id",
         "posthog_dashboarditem"."favorited",
         "posthog_dashboarditem"."refresh_attempt",
         "posthog_dashboarditem"."last_modified_at",
         "posthog_dashboarditem"."last_modified_by_id",
         "posthog_dashboarditem"."dashboard_id",
         "posthog_dashboarditem"."layouts",
         "posthog_dashboarditem"."color",
         "posthog_dashboarditem"."dive_dashboard_id",
         "posthog_dashboarditem"."updated_at"
  FROM "posthog_dashboardtile"
  INNER JOIN "posthog_dashboarditem" ON ("posthog_dashboardtile"."insight_id" = "posthog_dashboarditem"."id")
  INNER JOIN "posthog_dashboard" ON ("posthog_dashboardtile"."dashboard_id" = "posthog_dashboard"."id")
  WHERE "posthog_dashboardtile"."insight_id" = 2
  '
---
# name: TestUpdateCache.test_refresh_dashboard_cache.6
  '
  SELECT "posthog_dashboardtile"."id",
         "posthog_dashboardtile"."dashboard_id",
         "posthog_dashboardtile"."insight_id",
         "posthog_dashboardtile"."layouts",
         "posthog_dashboardtile"."color",
         "posthog_dashboardtile"."filters_hash",
         "posthog_dashboard"."id",
         "posthog_dashboard"."name",
         "posthog_dashboard"."description",
         "posthog_dashboard"."team_id",
         "posthog_dashboard"."pinned",
         "posthog_dashboard"."created_at",
         "posthog_dashboard"."created_by_id",
         "posthog_dashboard"."deleted",
         "posthog_dashboard"."share_token",
         "posthog_dashboard"."is_shared",
         "posthog_dashboard"."last_accessed_at",
         "posthog_dashboard"."filters",
         "posthog_dashboard"."creation_mode",
         "posthog_dashboard"."restriction_level",
         "posthog_dashboarditem"."id",
         "posthog_dashboarditem"."name",
         "posthog_dashboarditem"."derived_name",
         "posthog_dashboarditem"."description",
         "posthog_dashboarditem"."team_id",
         "posthog_dashboarditem"."filters",
         "posthog_dashboarditem"."filters_hash",
         "posthog_dashboarditem"."order",
         "posthog_dashboarditem"."deleted",
         "posthog_dashboarditem"."saved",
         "posthog_dashboarditem"."created_at",
         "posthog_dashboarditem"."last_refresh",
         "posthog_dashboarditem"."refreshing",
         "posthog_dashboarditem"."created_by_id",
         "posthog_dashboarditem"."is_sample",
         "posthog_dashboarditem"."short_id",
         "posthog_dashboarditem"."favorited",
         "posthog_dashboarditem"."refresh_attempt",
         "posthog_dashboarditem"."last_modified_at",
         "posthog_dashboarditem"."last_modified_by_id",
         "posthog_dashboarditem"."dashboard_id",
         "posthog_dashboarditem"."layouts",
         "posthog_dashboarditem"."color",
         "posthog_dashboarditem"."dive_dashboard_id",
         "posthog_dashboarditem"."updated_at"
  FROM "posthog_dashboardtile"
  INNER JOIN "posthog_dashboard" ON ("posthog_dashboardtile"."dashboard_id" = "posthog_dashboard"."id")
  INNER JOIN "posthog_dashboarditem" ON ("posthog_dashboardtile"."insight_id" = "posthog_dashboarditem"."id")
  WHERE "posthog_dashboardtile"."dashboard_id" = 2
  '
---
# name: TestUpdateCache.test_refresh_dashboard_cache.7
  '
  SELECT "posthog_dashboardtile"."id",
         "posthog_dashboardtile"."dashboard_id",
         "posthog_dashboardtile"."insight_id",
         "posthog_dashboardtile"."layouts",
         "posthog_dashboardtile"."color",
         "posthog_dashboardtile"."filters_hash",
         "posthog_dashboard"."id",
         "posthog_dashboard"."name",
         "posthog_dashboard"."description",
         "posthog_dashboard"."team_id",
         "posthog_dashboard"."pinned",
         "posthog_dashboard"."created_at",
         "posthog_dashboard"."created_by_id",
         "posthog_dashboard"."deleted",
         "posthog_dashboard"."share_token",
         "posthog_dashboard"."is_shared",
         "posthog_dashboard"."last_accessed_at",
         "posthog_dashboard"."filters",
         "posthog_dashboard"."creation_mode",
         "posthog_dashboard"."restriction_level",
         "posthog_dashboarditem"."id",
         "posthog_dashboarditem"."name",
         "posthog_dashboarditem"."derived_name",
         "posthog_dashboarditem"."description",
         "posthog_dashboarditem"."team_id",
         "posthog_dashboarditem"."filters",
         "posthog_dashboarditem"."filters_hash",
         "posthog_dashboarditem"."order",
         "posthog_dashboarditem"."deleted",
         "posthog_dashboarditem"."saved",
         "posthog_dashboarditem"."created_at",
         "posthog_dashboarditem"."last_refresh",
         "posthog_dashboarditem"."refreshing",
         "posthog_dashboarditem"."created_by_id",
         "posthog_dashboarditem"."is_sample",
         "posthog_dashboarditem"."short_id",
         "posthog_dashboarditem"."favorited",
         "posthog_dashboarditem"."refresh_attempt",
         "posthog_dashboarditem"."last_modified_at",
         "posthog_dashboarditem"."last_modified_by_id",
         "posthog_dashboarditem"."dashboard_id",
         "posthog_dashboarditem"."layouts",
         "posthog_dashboarditem"."color",
         "posthog_dashboarditem"."dive_dashboard_id",
         "posthog_dashboarditem"."updated_at"
  FROM "posthog_dashboardtile"
  INNER JOIN "posthog_dashboarditem" ON ("posthog_dashboardtile"."insight_id" = "posthog_dashboarditem"."id")
  INNER JOIN "posthog_dashboard" ON ("posthog_dashboardtile"."dashboard_id" = "posthog_dashboard"."id")
  WHERE "posthog_dashboardtile"."insight_id" = 2
  '
---
# name: TestUpdateCache.test_refresh_dashboard_cache.8
  '
  SELECT "posthog_dashboardtile"."id",
         "posthog_dashboardtile"."dashboard_id",
         "posthog_dashboardtile"."insight_id",
         "posthog_dashboardtile"."layouts",
         "posthog_dashboardtile"."color",
         "posthog_dashboardtile"."filters_hash",
         "posthog_dashboarditem"."id",
         "posthog_dashboarditem"."name",
         "posthog_dashboarditem"."derived_name",
         "posthog_dashboarditem"."description",
         "posthog_dashboarditem"."team_id",
         "posthog_dashboarditem"."filters",
         "posthog_dashboarditem"."filters_hash",
         "posthog_dashboarditem"."order",
         "posthog_dashboarditem"."deleted",
         "posthog_dashboarditem"."saved",
         "posthog_dashboarditem"."created_at",
         "posthog_dashboarditem"."last_refresh",
         "posthog_dashboarditem"."refreshing",
         "posthog_dashboarditem"."created_by_id",
         "posthog_dashboarditem"."is_sample",
         "posthog_dashboarditem"."short_id",
         "posthog_dashboarditem"."favorited",
         "posthog_dashboarditem"."refresh_attempt",
         "posthog_dashboarditem"."last_modified_at",
         "posthog_dashboarditem"."last_modified_by_id",
         "posthog_dashboarditem"."dashboard_id",
         "posthog_dashboarditem"."layouts",
         "posthog_dashboarditem"."color",
         "posthog_dashboarditem"."dive_dashboard_id",
         "posthog_dashboarditem"."updated_at"
  FROM "posthog_dashboardtile"
  INNER JOIN "posthog_dashboard" ON ("posthog_dashboardtile"."dashboard_id" = "posthog_dashboard"."id")
  INNER JOIN "posthog_dashboarditem" ON ("posthog_dashboardtile"."insight_id" = "posthog_dashboarditem"."id")
  WHERE (("posthog_dashboard"."is_shared"
          OR "posthog_dashboard"."last_accessed_at" > '2022-04-21T08:19:58.979219+00:00'::timestamptz)
         AND NOT ("posthog_dashboard"."deleted")
         AND NOT ("posthog_dashboarditem"."refreshing")
         AND NOT ("posthog_dashboarditem"."deleted")
         AND NOT ("posthog_dashboarditem"."refresh_attempt" > 2
                  AND "posthog_dashboarditem"."refresh_attempt" IS NOT NULL)
         AND NOT ("posthog_dashboarditem"."filters" = '{}'))
  ORDER BY "posthog_dashboarditem"."last_refresh" ASC NULLS FIRST
  LIMIT 5
  '
---
# name: TestUpdateCache.test_refresh_dashboard_cache.9
  '
  SELECT "posthog_dashboard"."id",
         "posthog_dashboard"."name",
         "posthog_dashboard"."description",
         "posthog_dashboard"."team_id",
         "posthog_dashboard"."pinned",
         "posthog_dashboard"."created_at",
         "posthog_dashboard"."created_by_id",
         "posthog_dashboard"."deleted",
         "posthog_dashboard"."share_token",
         "posthog_dashboard"."is_shared",
         "posthog_dashboard"."last_accessed_at",
         "posthog_dashboard"."filters",
         "posthog_dashboard"."creation_mode",
         "posthog_dashboard"."restriction_level"
  FROM "posthog_dashboard"
  WHERE "posthog_dashboard"."id" = 2
  LIMIT 21
  '
---
